<resources>
    <string name="app_name">UASKel1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="masuk">Masuk</string>
    <string name="daftar">Daftar</string>
    <string name="email">Email</string>
    <string name="ketemail">Masukkan Email</string>
    <string name="password">Password</string>
    <string name="edit">Edit</string>
    <string name="search">Search</string>
    <string name="ketpassword">Masukkan Password</string>
    <string name="nama">Nama Lengkap</string>
    <string name="ketnama">Masukkan Nama Lengkap</string>
    <string name="text1">SayNoToKesenjanganSosial !</string>
    <string name="text2">Selamat Datang Viranti! </string>
    <string name="text3">Tahukah Kamu...?</string>
    <string name="text4">Hii Viranti! </string>
    <string name="text5">Selamat Datang </string>
    <string name="pelatihan">Pelatihan</string>
    <string name="pengajuan">Pengajuan</string>
    <string name="lowongan">Lowongan Pekerjaan</string>
    <string name="informasi">Informasi Terkini</string>
    <string name="home">Home</string>
    <string name="faq">FAQ</string>
    <string name="akun">Akun</string>
    <string name="jahit">Jahit</string>
    <string name="lukis">Lukis</string>
    <string name="sulam">Sulam</string>
    <string name="tenun">Tenun</string>
    <string name="pahat">Pahat</string>
    <string name="merias">Merias</string>
    <string name="tambahpengajuan">Tambah pengajuan</string>
    <string name="jdlpengajuan1">Perbaikan Jalan</string>
    <string name="descpengajuan1">Terdapat kerusakan jalan yang cukup parah yang terjadi di sekitaran Jl. Uka, garuda sakti, Pekanbaru. </string>
    <string name="jdlpengajuan2">Rumah Layak Huni</string>
    <string name="descpengajuan2">Terdapat beberapa kepala keluarga yang terdaftar masih tinggal di rumah yang sudah tidak layak untuk ditinggali.  Permasalahan ini terjadi diperkirakan karna rendahnya tingkat pendapatan masyarakat sehingga dirasa harus mendapatkan rumah layak huni  untuk tempat tinggal </string>
    <string name="jdlpengajuan3">Bantuan PKH</string>
    <string name="descpengajuan3">Setelah dilakukan survei tentang kehidupan ekonomi masyarakat maka dapat disimpulkan bahwa terlampir nama masyarakat yang dirasa harus mendapatkan bantuan</string>
    <string name="berita1">Pemerintah luncurkan program besar atasi ketimpangan sosial.</string>
    <string name="tglberita1">10 Desember 2023</string>
    <string name="it">Informasi Teknologi</string>
    <string name="akuntansi">Akuntansi</string>
    <string name="pemasaran">Pemasaran</string>
    <string name="tambahvideo">Tambah Video</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="kesehatan">Kesehatan</string>
    <string name="hukum">Hukum</string>
    <string name="teknik">Teknik</string>
    <string name="ilmusosial">Ilmu Sosial</string>
    <string name="informasiTeknologi">Informasi dan Teknologi</string>
    <string name="seni">Seni dan Hiburan</string>
    <string name="tenagamedis">Tenaga Medis </string>
    <string name="lokertipe">Pilih Tipe Pekerjaan yang Diinginkan</string>
    <string name="paruhwkt">Paruh Waktu</string>
    <string name="penuhhwkt">Penuh Waktu</string>
    <string name="kontrak">Kontrak</string>
    <string name="welcomepelatihanlistmerias">Selamat Datang di kelas merias.</string>
    <string name="welcomepelatihanlistjahit">Selamat Datang di kelas jahit.</string>
    <string name="welcomepelatihanlistlukis">Selamat Datang di kelas lukis.</string>
    <string name="desckelasmerias">Terima kasih sudah bergabung dengan kelas belajar merias. Disini kamu dapat melihat berbagai tips dan triks merias yang baik dan pastinya menarik, lho !</string>
    <string name="desckelasjahit">Terima kasih sudah bergabung dengan kelas belajar jahit. Disini kamu dapat melihat berbagai tips dan triks menjahit yang baik dan pastinya menarik, lho !</string>
    <string name="desckelaslukis">Terima kasih sudah bergabung dengan kelas belajar lukis. Disini kamu dapat melihat berbagai tips dan triks melukis yang baik dan pastinya menarik, lho !</string>
    <string name="descberita">Ketua Dewan Perwakilan rakyat (DPR) puan maharani mengungkapkan saat ini indonesia telah mencapai kemajuan yang besar. Dia menyebut indonesia kini masuk dalam 20 negara terbesar dari sisi perekonomian indonesia. “ Masuk dalam kategori negara upper middle income, kita dapat secara bertahap menurunkan kemiskinan dan kesenjangan sosial”. Lalu indonesi juga sudah memiliki industri pengolahan nasional, dapat menjalankan industri stategis.  “ Kita memiliki generasi muda yang berprestasi dan berbagai kemajuan lainnya yang sudah banyak kita capai. </string>
    <string name="jdlLoker">Masukkan Judul Loker</string>
    <string name="dtlLoker">Masukkan Detail Loker</string>
    <string name="tglLoker">Masukkan Deadline Loker</string>
    <string name="tambah">Tambah</string>
    <string name="judulloker">IT</string>
    <string name="detilloker">Loremipsim</string>
    <string name="tanggalloker">22 Desember 2023</string>
    <string name="jdlpengajuan">Masukkan Judul Pengajuan</string>
    <string name="dtlpengajuan">Masukkan Detail Pengajuan</string>
    <string name="tglpengajuan">Masukkan Tanggal Pengajuan</string>
    <string name="logout">Keluar</string>
</resources>