<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card1"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rounded_orange"
    android:padding="16dp"

    >
    <TextView
        android:id="@+id/itmjdllokerakt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jdlpengajuan1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/itmtgllokerakt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tglpengajuan"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itmjdllokerakt"
        />

    <TextView
        android:id="@+id/itmdetillokerakt"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descpengajuan1"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/itmtgllokerakt"
        />


</androidx.constraintlayout.widget.ConstraintLayout>