<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <ImageView
        android:id="@+id/ilus1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/shape2"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        android:id="@+id/tv_masuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daftar"
        android:textSize="32sp"
        android:textStyle="bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/ilus1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/nama"
        android:textSize="20sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_masuk"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/edt_nama"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/ketnama"
        android:textSize="16sp"
        android:paddingHorizontal="15dp"
        android:layout_marginLeft="32dp"
        android:paddingVertical="8dp"
        android:background="@drawable/rounded"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_nama"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_nama"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/edt_email"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/ketemail"
        android:textSize="16sp"
        android:paddingHorizontal="15dp"
        android:layout_marginLeft="32dp"
        android:paddingVertical="8dp"
        android:background="@drawable/rounded"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:layout_marginLeft="32dp"
        android:textSize="20sp"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_email"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <EditText
        android:id="@+id/edt_password"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:text="@string/password"
        android:layout_marginLeft="32dp"
        android:textSize="16sp"
        android:paddingHorizontal="15dp"
        android:paddingVertical="8dp"
        android:background="@drawable/rounded"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <Button
        android:id="@+id/btn_masuk"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:text="@string/masuk"
        android:textSize="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="32dp"
        android:backgroundTint="@color/primary"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/edt_password"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_masuk"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/tv_sdhakun"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sudah punya akun?"
            android:textSize="12sp"
            android:textColor="@color/textgray"
            />
        <TextView
            android:id="@+id/tv_daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/masuk"
            android:textSize="12sp"
            android:textColor="@color/primary"
            android:layout_marginLeft="5dp"
            android:layout_toEndOf="@id/tv_sdhakun"
            />
    </RelativeLayout>

    <ImageView
        android:id="@+id/shape2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/shape1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>