<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="32dp"
    android:paddingVertical="32dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/card1"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text1"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text2"
            android:layout_below="@+id/text1"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
    </RelativeLayout>

    <EditText
        android:id="@+id/edt_search"
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded"
        android:backgroundTint="@color/graysmooth"
        android:paddingVertical="8dp"
        android:paddingHorizontal="12dp"
        android:textSize="12sp"
        android:hint="@string/search"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/card1"
        app:layout_constraintLeft_toLeftOf="parent"
        />
    <!--    card2-->

    <RelativeLayout
        android:id="@+id/card2"
        android:layout_marginTop="24dp"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/graysmooth"
        android:background="@drawable/rounded"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_search"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView
            android:id="@+id/ic_book"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_book"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ic_book"
            android:layout_centerVertical="true"
            android:text="@string/pelatihan"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            />
    </RelativeLayout>
    <!--    card2-->
    <RelativeLayout
        android:id="@+id/card3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/graysmooth"
        android:background="@drawable/rounded"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_search"
        app:layout_constraintLeft_toRightOf="@+id/card2"
        >
        <ImageView
            android:id="@+id/ic_lampu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_lamp"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ic_lampu"
            android:layout_centerVertical="true"
            android:text="@string/pengajuan"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            />
    </RelativeLayout>

    <!--    card 3-->
    <RelativeLayout
        android:id="@+id/card4"
        android:layout_marginTop="24dp"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/graysmooth"
        android:background="@drawable/rounded"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:layout_constraintLeft_toLeftOf="parent"
        >
        <ImageView
            android:id="@+id/ic_lowkerja"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_lowkerja"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ic_lowkerja"
            android:layout_centerVertical="true"
            android:text="@string/lowongan"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            />
    </RelativeLayout>
    <!--    card 4-->
    <RelativeLayout
        android:id="@+id/card5"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="24dp"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/graysmooth"
        android:background="@drawable/rounded"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@+id/card2"
        app:layout_constraintLeft_toRightOf="@+id/card4"
        >
        <ImageView
            android:id="@+id/ic_informasi"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_informasi"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/ic_informasi"
            android:layout_centerVertical="true"
            android:text="@string/informasi"
            android:textSize="14sp"
            android:textStyle="bold"
            android:layout_marginLeft="5dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text3"
        android:layout_marginTop="24dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/card5"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <ImageView
        android:id="@+id/img1"
        android:layout_marginTop="10dp"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@+id/text3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:src="@drawable/image1"/>

</androidx.constraintlayout.widget.ConstraintLayout>