<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="24dp"
    android:background="@drawable/rounded"
    android:layout_width="match_parent"
    android:layout_height="130dp">

    <TextView
        android:id="@+id/lkPdkJudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judulloker"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id="@+id/lkPdkDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/detilloker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lkPdkJudul"
        />
    <TextView
        android:id="@+id/lkPdkTanggal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tanggalloker"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lkPdkDetail"
        />

    <ImageView
        android:id="@+id/editlokerPdk"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:layout_marginRight="12dp"
        android:src="@drawable/ic_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/hapuslokerPdk"
        />

    <ImageView
        android:id="@+id/hapuslokerPdk"
        android:layout_width="18dp"
        android:layout_height="18dp"
        android:src="@drawable/ic_hapus"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>