<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card1"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_marginBottom="16dp"
    android:background="@drawable/rounded_nonstroke"
    android:padding="16dp"
    android:backgroundTint="@color/white"
    >
    <TextView
        android:id="@+id/jdl_pengajuanitm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/jdlpengajuan1"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tgl_pengajuanitm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tglpengajuan"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jdl_pengajuanitm"
        />

    <TextView
        android:id="@+id/detil_pengajuanitm"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descpengajuan1"
        android:textColor="@color/black"
        android:textSize="10sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tgl_pengajuanitm"
        />

    <ImageView
        android:id="@+id/ic_editpengajuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:src="@drawable/ic_edit"
        android:layout_marginRight="8dp"
        app:layout_constraintTop_toBottomOf="@+id/detil_pengajuanitm"
        app:layout_constraintRight_toLeftOf="@+id/ic_hapuspengajuan"
        />
    <ImageView
        android:id="@+id/ic_hapuspengajuan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:src="@drawable/ic_hapus"
        app:layout_constraintTop_toBottomOf="@+id/detil_pengajuanitm"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>